# ex1

./: CMakeLists.txt  README.md
csl3/: election.c  makefile  tribe.c  tribe.h
csl3/mtm_map/: map.c
final/: CMakeLists.txt  area.c  area.h  election.c  election.h  makefile  test_utilities.h  tribe.c  tribe.h
final/mtm_map/: map.c  map.h
final/tests/: electionTests.c  electionTests.h  electionTestsExample.c  electionTestsMain.c  map_example_test.c
final/tests/ex1_tests/: electionTestsExample.c  mapTests.c  mapTests.h  mapTestsMain.c  map_example_test.c
wet/: area.c  area.h  compress.sh  election.h  makefile  test_utilities.h
wet/mtm_map/: map.c  map.h
wet/tests/: 2electionTestsExample.c  electionTestsExample.c  map_example_test.c
